fixed some issues, enhanced readability

--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,23 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /*===== header ======*/
 header {
     margin: 5px;
     padding: 5px;
+}
+
+/*===== hr ======*/
+hr {
+    height: 2px;
+    background-color: black;
+    border: none;
+}
+
+.bottom_hr {
+    margin-top: 20px;
 }
 
 /*===== h2 ======*/
@@ -25,6 +35,7 @@ body {
 /*===== footer ======*/
 footer {
     margin: 10px;
+    margin-bottom: 40px
 }
 
 /*===== CLASSES =====*/
@@ -39,6 +50,7 @@ footer {
 }
 .class4 {
     border: 2px solid black;
+    margin-bottom: 20px;
 }
 
 .class1, .class2, .class3, .class4 {
